--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -47,9 +47,7 @@
             android:layout_gravity="center"
             android:id="@+id/sale_button"
             android:layout_height="wrap_content"
-            android:text="@string/sale" />
-
+            android:text="@string/sale"
+            android:focusable="false"/>
     </LinearLayout>
-
-
 </LinearLayout>
